tests/semantic/pass/ternary_int_char.c
int main(void) {
   int i;
   char c;
   0 ? i : c; 
   return 0;
}
