tests/semantic/fail/ternary_iptr_cptr.c
int main(void) {
   int *iptr;
   char *cptr;
   0 ? iptr : cptr;
   return 0;
}
